<resources>
    <string name="app_name">Sing LPH</string>
    <string name="love_peace_harmony_messenger">Love Peace Harmony Messenger</string>
    <string name="facebook_app_id">266698898791482</string>
    <string name="fb_login_protocol_scheme">fb372387683172262</string>
    <string name="default_time_template">00:00</string>
    <string name="listen">Listen</string>
    <string name="about">About</string>
    <string name="news">News</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_warning">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="success">Success.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_to_delete_user_data">Failed to delete user data: </string>
    <string name="failed_to_delete_account">Failed to delete user account: </string>
    <string name="chanting_for_world_peace">Chanting for World Peace</string>
    <string name="chant_now">Listen</string>
    <string name="reminders">Reminders</string>
    <string name="milestones">Milestones</string>
    <string name="now_playing">Now Playing</string>
    <string name="shuffle_turned_on">Shuffle Turned On</string>
    <string name="shuffle_turned_off">Shuffle Turned Off</string>
    <string name="repeat_turned_on">Repeat Turned On</string>
    <string name="repeat_turned_off">Repeat Turned Off</string>
    <string name="love_peace_harmony_in_many_languages">Love Peace Harmony Song</string>
    <string name="expressions_of_love_peace_harmony">Expressions of Love Peace Harmony</string>
    <string name="set_reminders_to_chant">Set reminders to chant</string>
    <string name="chant_any_time">Chant any time</string>
    <string name="view_your_milestones">View your milestones</string>
    <string name="turn_on_off_chants">Turn on / off chants</string>
    <string name="everyday">Everyday</string>
    <string name="off">Off</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="use_the_switches_to_customize_your_chant">Use the switches to customize your chanting playlist.</string>
    <string name="now_playing_colon">Now playing:</string>
    <string name="mandarin_soul_language_and_english">Mandarin, Soul Language, and English</string>
    <string name="instrumental">Instrumental</string>
    <string name="hindi">Hindi</string>
    <string name="hindi_soul_language_english">Hindi, Soul Language, English</string>
    <string name="spanish">Spanish</string>
    <string name="mandarin_english_german">Mandarin, English, German</string>
    <string name="french">French</string>
    <string name="french_and_creole">French &amp; Creole</string>
    <string name="aloha_maluhai_lokahi">Aloha, Maluhai, Lokahi (LPH in Hawaiian)</string>
    <string name="lu_la_li_version_english_hawaiian">Lu La Li Version, English and Hawaiian</string>
    <string name="love_peace_harmony_in_english">Love Peace Harmony in English</string>
    <string name="no_reminder_added">No reminder added</string>
    <string name="repeat_off">Repeat - Off</string>
    <string name="repeats">Repeats</string>
    <string name="alarm_already_added_for_this_item">Alarm already added for this time!</string>
    <string name="repeat">Repeat</string>
    <string name="default_">Default</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="sound">Sound</string>
    <string name="do_you_want_to_delete_the_alarm">Do you want to delete the alarm?</string>
    <string name="maximum_number_of_reminders_reached">Maximum number of reminders reached</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="select_repeat">Select Repeat</string>
    <string name="alert">Alert</string>
    <string name="on">On</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="you_have_chanted_for_a_total_of">You have chanted for a total of</string>
    <string name="erase_milestones">Erase Milestones</string>
    <string name="do_you_want_to_reset_all_your_milestones">Do You Want to Reset All Your Milestones?</string>
    <string name="milestone_data_deleted">Milestone Data Deleted</string>
    <string name="days_straight">Days Straight</string>
    <string name="days">Days</string>
    <string name="longest_streak">Longest streak:</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account_sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_password_cant_be_empty">Email/password can\'t be empty</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="create_an_account">Create an Account</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="an_email_to_reset_your_password_has_been_sent">An email to reset your password has been sent.</string>
    <string name="email_sent">Email Sent</string>
    <string name="please_provide_valid_email">Please provide valid email.</string>
    <string name="or_connect_using">Or Connect Using</string>
    <string name="reset_password">Reset Password</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="password_needs_to_be_at_least_6_characters">Password needs to be at least 6 characters</string>
    <string name="please_enter_confirmation_password">Please enter confirmation password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="its_time_to_chant">It\'s time to chant!!!</string>
    <string name="please_enable_your_song_and_play">Please enable your song &amp; play</string>
    <string name="no_previous_song">No previous song</string>
    <string name="no_next_song">No next song</string>
    <string name="the_song">The Song</string>
    <string name="the_movement">The Movement</string>
    <string name="master_sha">Master Sha</string>
    <string name="visit_our_website">Visit Our Website</string>
    <string name="donate_now">Donate Now</string>
    <string name="no_data">No data available.</string>
    <string name="love_peace_harmony">Love Peace Harmony</string>
    <string name="heal_and_transform_the_world">Heal and Transform the World</string>
    <string name="about_master_sha_content">Dr. and Master Zhi Gang Sha, an 11-time New York Times bestselling author with 21 books written on alternative medicine, is a pioneer in modern-day spirituality. As a medical doctor trained in Western medicine, traditional Chinese medicine and acupuncture, Master Sha is the creator of Soul Mind Body Medicine.\n\nAs the founder of the Institute of Soul Healing and Enlightenment and the Love Peace Harmony Foundation, Master Sha was honored in 2006 with the prestigious Martin Luther King, Jr. Commemorative Commission Award for his humanitarian efforts. In 2014, Master Sha was recognized by the cities of Maui and Honolulu in Hawaii for his compassionate service to promote love, peace and harmony worldwide. Master Sha was invited in 2015 to be one of the founding signatories of the Fuji Declaration, whose mission is to create lasting peace on Earth. Master Sha is a member of Rotary E-Club of World Peace and is a founding signatory of Conscious Business Declaration, which aims to define a new standard for business in the 21st century. In 2016, Master Sha received a commendation from Los Angeles County for his humanitarian efforts both locally and worldwide.\n\nAs a grandmaster of many ancient disciplines, including qigong, tai chi, kung fu, feng shui and the I Ching, Master Sha was named Qigong Master of the Year at the Fifth World Congress on Qigong.</string>
    <string name="shuffle">Shuffle</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="forward">Forward</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_up">Volume Up</string>
</resources>