<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.lovepeaceharmony.androidapp.ui.fragment.ChantNowFragment">

    <!-- Player Controller Fixed at the Top -->
    <LinearLayout
        android:id="@+id/player_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/shuffle"
            android:src="@drawable/ic_shuffle_icon"
            app:tint="@color/bottom_icon_color" />

        <ImageView
            android:id="@+id/iv_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/rewind"
            android:src="@drawable/ic_rewind_button"/>

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="32dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play_button"/>

        <ImageView
            android:id="@+id/iv_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/forward"
            android:src="@drawable/ic_forward_button"/>

        <ImageView
            android:id="@+id/iv_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/repeat"
            android:src="@drawable/ic_repeat_button" />
    </LinearLayout>

    <!-- Now Playing Text -->
    <TextView
        android:id="@+id/tv_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        style="@style/OpenSansSemiBoldTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/player_controller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <!-- Progress Bar/Seek Bar -->
    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_now_playing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Timer Display -->
    <LinearLayout
        android:id="@+id/timerDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/songProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/top_bar_orange"
            style="@style/OpenSansSemiBoldTextViewStyle"/>

        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/colorPrimaryDark"
            style="@style/OpenSansSemiBoldTextViewStyle"/>
    </LinearLayout>

    <!-- RecyclerView for Songs Container -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/timerDisplay"
        app:layout_constraintBottom_toTopOf="@id/volume_adjuster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Volume Adjuster Fixed at the Bottom -->
    <LinearLayout
        android:id="@+id/volume_adjuster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/volume_down"
            android:src="@drawable/ic_volume_down_black_24dp" />

        <SeekBar
            android:id="@+id/volume_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/volume_up"
            android:src="@drawable/ic_volume_up_black_24dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
